--- a/src/partials/swiper.html
+++ b/src/partials/swiper.html
@@ -1,17 +1,16 @@
 <!-- Slider main container -->
-<div class="swiper container" id="carusel">
+<section class="swiper container" id="carusel">
     <!-- Additional required wrapper -->
 
     <div class="swiper-wrapper">
       <!-- Slides -->
       <div class="swiper-slide">
         
-        <section class="customer-reviews container" id="testimonials">
-          <div class="customer-reviews__image" >
-            <img 
-            id="person-image"
-              src="/src/images/testimonials/testimonials1.png"
-              alt="first testmionial person image"
+        <div class="customer-reviews container" id="testimonials">
+            <div class="customer-reviews__image" >
+                <img 
+                    src="/src/images/testimonials/testimonials1.png"
+                    alt="first testmionial person image"
             />
           </div>
   
@@ -30,14 +29,14 @@
             <div class="red-dot" data-swiper-parallax="-15000"></div>
             <div class="red-dot" data-swiper-parallax="-20000"></div>
           </div>
-          <p class="reviewer-name" id="person-name">Emily, Los Angeles</p>
-        </section>
+          <p class="reviewer-name">Emily, Los Angeles</p>
+        </div>
 
     </div>
 
       <div class="swiper-slide">
         
-        <section class="customer-reviews container" id="testimonials">
+        <div class="customer-reviews container">
           <div class="customer-reviews__image">
             <img
             id="person-image"
@@ -48,7 +47,7 @@
   
           <div class="customer-reviews__text-container">
             <div class="container-text">
-              <p class="underline-text" id="person-review">
+              <p class="underline-text">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
                 ipsum primis in nibh vel risus.
@@ -61,14 +60,14 @@
             <div class="red-dot" data-swiper-parallax="-15000"></div>
             <div class="red-dot" data-swiper-parallax="-20000"></div>
           </div>
-          <p class="reviewer-name" id="person-name">Anna, Vaslui</p>
-        </section>
+          <p class="reviewer-name">Sorana, Vaslui</p>
+        </div>
 
       </div>
 
       <div class="swiper-slide">
       
-        <section class="customer-reviews container" id="testimonials">
+        <section class="customer-reviews container">
           <div class="customer-reviews__image">
             <img
             id="person-image"
@@ -79,7 +78,7 @@
   
           <div class="customer-reviews__text-container">
             <div class="container-text">
-              <p class="underline-text" id="person-review">
+              <p class="underline-text">
                 Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
                 Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
                 ipsum primis in nibh vel risus.
@@ -92,7 +91,7 @@
             <div class="red-dot" data-swiper-parallax="-15000"></div>
             <div class="red-dot" data-swiper-parallax="-20000"></div>
           </div>
-          <p class="reviewer-name" id="person-name">Sarah, Bacau</p>
+          <p class="reviewer-name">Clara, Bacau</p>
         </section>
 
       </div>
@@ -105,7 +104,7 @@
     <div class="swiper-button-next"></div> -->
   
     <!-- If we need scrollbar -->
-    <!-- <div class="swiper-scrollbar"></div>
-  </div> -->
+    <!-- <div class="swiper-scrollbar"></div> -->
+    </section>
 
   
