varianta finala de revizuit

--- a/src/partials/contacts-section.html
+++ b/src/partials/contacts-section.html
@@ -1,8 +1,8 @@
-<section class="contacts">
+<section class="contacts" id="contacts-section">
     <div class="contacts-container container">
         <h2 hidden>Our contacts</h2>
         <ul class="contacts-list unstyled-list">
-            <li class="contacts-list__item">
+            <li class="contacts-list__item appearance">
                 <p class="contacts-list__item-product contacts-list__item-cafe">CAFE</p>
                 <div class="contacts-list__item-location">
                     <p class="contacts-list__item-town">Chicago</p>
@@ -28,7 +28,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="contacts-list__item">
+            <li class="contacts-list__item appearance1">
                 <p class="contacts-list__item-product contacts-list__item-foodtruck">FOOD TRUCK</p>
                 <div class="contacts-list__item-location">
                     <p class="contacts-list__item-town">Los Angeles</p>
@@ -56,7 +56,7 @@
                 </ul>
 
             </li>
-            <li class="contacts-list__item">
+            <li class="contacts-list__item appearance2">
                 <p class="contacts-list__item-product contacts-list__item-cafe">CAFE</p>
                 <div class="contacts-list__item-location">
                     <p class="contacts-list__item-town">New York</p>
@@ -87,8 +87,8 @@
     </div>
     <ul class="contacts-list-btn unstyled-list">
         <li class="contacts-list-btn__item ">
-            <span class="btn-container bounce">
-                <button class="contacts-list-btn__item-locations" type="button"> <span class="bounce"></span>Our
+            <span class="btn-container raise">
+                <button class="contacts-list-btn__item-locations raise" type="button"> <span class="raise"></span>Our
                     Locations
                     <svg class="contacts-list-btn__locations-icon">
                         <use href="./images/sprite.svg#icon-Vector-2"></use>
@@ -96,7 +96,7 @@
                 </button></span>
         </li>
         <li class="contacts-list-btn__item ">
-            <button class="contacts-list-btn__item-franchise" type="button">Franchise
+            <button class="contacts-list-btn__item-franchise raise" type="button">Franchise
                 <svg class="contacts-list-btn__franchise-icon">
                     <use href="./images/sprite.svg#icon-Vector-1"></use>
                 </svg>
