--- a/src/partials/about-section.html
+++ b/src/partials/about-section.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about-section">
   <div class="container about-section">
     <div class="name-wrapper">
       <h3 class="about__label">tradition and love</h3>
@@ -39,12 +39,12 @@
           tincidunt.
           <span>Aliquam erat volutpat. Aenean accumsan.</span>
         </p>
-        <button class="about__content-button" type="button">
-          <span class="bounce">
+        <button class="about__content-button raise" type="button">
+          
             Read more
             <svg class="about__content-icon" width="4px" height="8px">
-              <use href="./images/sprite.svg#icon-Vector-1"></use></svg
-          ></span>
+              <use href="./images/sprite.svg#icon-Vector-1"></use></svg>
+         
         </button>
       </div>
     </div>
