--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -13,22 +13,22 @@
           <a class="nav__list-link" href="#home">Home</a>
         </li>
         <li class="nav__list-item">
-          <a class="nav__list-link" href="#about-section.html">About us</a>
+          <a class="nav__list-link" href="#about-section">About us</a>
         </li>
         <li class="nav__list-item">
-          <a class="nav__list-link" href="#about-section.html">How it’s made?</a>
+          <a class="nav__list-link" href="#about-section">How it’s made?</a>
         </li>
         <li class="nav__list-item">
-          <a class="nav__list-link" href="#products-section.html">Our products</a>
+          <a class="nav__list-link" href="#products-section">Our products</a>
         </li>
         <li class="nav__list-item">
-          <a class="nav__list-link" href="#contacts-section.html">Contact</a>
+          <a class="nav__list-link" href="#contacts-section">Contact</a>
         </li>
       </ul>
     </nav>
     <div class="btn-wrapper">
     <button
-      class="menu-toggle js-open-menu"
+      class="menu-toggle js-open-menu raise"
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
@@ -44,7 +44,7 @@
            
           </svg>
       </button>
-    <button class="btn-nav" type="button"><span class="bounce">
+    <button class="btn-nav raise" type="button"><span class="raise">
       Buy now
       <svg class="btn-nav__svg" width="4px" height="8px">
         <use href="./images/sprite.svg#icon-Vector-1"></use>
@@ -66,10 +66,10 @@
         </h1>
         <ul class="hero__btn unstyled-list">
           <li class="hero__btn-item-first">
-            <button class="hero__btn-type-first" type="button"><span class="bounce">Products </span></button>
+            <a href="#products-section"><button class="hero__btn-type-first raise" type="button"><span class="raise">Products </span></button></a>
           </li>
           <li class="hero__btn-item-second">
-            <button class="hero__btn-type-second" type="button"><span class="bounce">How it’s made?</span> </button>
+            <a href="#about-section"><button class="hero__btn-type-second raise" type="button"><span class="raise">How it’s made?</span> </button></a>
           </li>
         </ul>
       </div>
@@ -92,7 +92,7 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
         eiusmod tempor incididunt ut labore et
       </p>
-      <button class="arrow-button arrow-button--mod" type="button">
+      <button class="arrow-button arrow-button--mod raise" type="button">
         <svg class="arrow-button__svg" width="15px" height="15px">
           <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
         </svg>
