--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,32 +1,32 @@
-<div class="menu-container js-menu-container" id="mobile-menu">
-  <button class="menu-toggle js-close-menu">
+<div class="js-mobile-menu mobile-menu">
+  <button class="menu-toggle js-close-menu raise">
     <svg fill="#212121" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
       <path fill-rule="evenodd" fill="#ffff"
         d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
         clip-rule="evenodd"></path>
     </svg>
   </button>
-  <button class="btn-nav btn-nav--mod" type="button"><span class="bounce">
+  <button class="btn-nav btn-nav--mod raise" type="button">
       Buy now
       <svg class="btn-nav__svg" width="4px" height="8px">
         <use href="./images/sprite.svg#icon-Vector-1"></use>
-      </svg></span>
+      </svg>
   </button>
   <ul class="mobile-menu__list unstyled-list">
     <li class="mobile-menu__item unstyled-list">
-      <a href="" class="mobile-menu__link mobile-menu__link--current">Home</a>
+      <a href="" class="mobile-menu__link">Home</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#about" class="mobile-menu__link">About us</a>
+      <a href="#about-section" class="mobile-menu__link">About us</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#about" class="mobile-menu__link mobile-menu__link--current">How it's made?</a>
+      <a href="#about-section" class="mobile-menu__link">How it's made?</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#products" class="mobile-menu__link">Our products</a>
+      <a href="#products-section" class="mobile-menu__link">Our products</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="#contact" class="mobile-menu__link mobile-menu__link--current">Contact</a>
+      <a href="#contacts-section" class="mobile-menu__link">Contact</a>
     </li>
   </ul>
 
