--- a/src/sass/components/_about-section.scss
+++ b/src/sass/components/_about-section.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 32px;
+  align-self: center;
 }
 
 @media screen and (min-device-pixel-ratio: 2),
