--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -48,22 +48,32 @@ height: 26px;
   margin: 0 auto;
 }
 
-.about__content-button .bounce:focus,
-.arrow-button .bounce:focus,
-.contacts-list-btn__item-franchise .bounce:focus,
-.hero__btn-type-first .bounce:focus,
-  .hero__btn-type-second .bounce:focus,
-  .btn-nav--mod .bounce:focus,
-  .btn-nav--mod .bounce:hover
-  {
-  animation-name: bounce-left;
-  animation-duration: 1s;
-  animation-timing-function: ease;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
- }
+.raise:hover,
+.raise:focus {
+  animation: raise 1s;
+  animation-fill-mode: forwards;
+}
 
 
+
+//  .appearance {
+//   animation: appearance 5s ease 0s 1 normal forwards;
+//  }
+//  .appearance1 {
+//   animation: appearance 4s ease 0s 1 normal forwards;
+//  }
+//  .appearance2 {
+//   animation: appearance 3s ease 0s 1 normal forwards;
+//  }
+
+// .bounce:hover,
+// .bounce:focus {
+//   animation-name: bounce-left;
+//   animation-duration:2s;
+//   animation-timing-function: ease;
+//   animation-delay: 0s;
+//   animation-iteration-count: 1;
+// }
 
 @media screen and (min-width: 768px) {
   .container {
@@ -75,20 +85,5 @@ height: 26px;
   .container {
     width: 1280px;
   }
-
-  .about__content-button .bounce:hover,
-  .arrow-button .bounce:hover,
-  .contacts-list-btn__item-locations .bounce:hover,
-  .contacts-list-btn__item-franchise .bounce:hover,
-  .btn-nav .bounce:hover,
-  .hero__btn-type-first .bounce:hover,
-  .hero__btn-type-second .bounce:hover
-  {
-    animation-name: bounce-left;
-    animation-duration: 1s;
-    animation-timing-function: ease;
-    animation-delay: 0s;
-    animation-iteration-count: 1;
-    
-   }
+ 
 }
