--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -61,4 +61,47 @@
   }
 }
 
+@keyframes appearance {
+	0% {
+		opacity: 0;
+		transform: translateX(-250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+}
+
+@keyframes raise {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-5px); }
+  100% { transform: translateY(0); }
+}
+
+// button::before {
+//   content: '';
+//   pointer-events: none;
+//   opacity: .6;
+//   background:
+//     radial-gradient(circle at 20% 35%,  transparent 0,  transparent 2px, var(--text-color) 3px, var(--text-color) 4px, transparent 4px),
+//     radial-gradient(circle at 75% 44%, transparent 0,  transparent 2px, var(--text-color) 3px, var(--text-color) 4px, transparent 4px),
+//     radial-gradient(circle at 46% 52%, transparent 0, transparent 4px, var(--text-color) 5px, var(--text-color) 6px, transparent 6px);
+
+//   width: 100%;
+//   height: 300%;
+//   top: 0;
+//   left: 0;
+//   position: absolute;
+//   animation: bubbles 5s linear infinite both;
+// }
+
+// @keyframes bubbles {
+//   from {
+//     transform: translate();
+//   }
+//   to {
+//     transform: translate(0, -66.666%);
+//   }
+// }
  
