--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,5 @@
 <section class="gallery" id="gallery">
-    <h2 class="gallery">how it’s made?</h2>
+    <h2 hidden class="gallery">gallery</h2>
     <div class="gallery__container">
 
 
