--- a/src/partials/swiper.html
+++ b/src/partials/swiper.html
@@ -5,7 +5,7 @@
     <div class="swiper-wrapper">
       <!-- Slides -->
       <div class="swiper-slide">
-        <h2 class="swiper">how it’s made?</h2>
+        <h2 hidden class="swiper">swiper</h2>
         
         <div class="customer-reviews container" id="testimonials">
             <div class="customer-reviews__image" >
