--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -216,7 +216,10 @@
     &__form {
         gap: 5px;
     }
-    }
+  &__order-input {
+    width: 40px;
+  }
+  }
 .buy-modal-inner-div {
     width: 430px;
     }
