--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -83,10 +83,9 @@
     }
   }
 .hero {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding: 60px 0 60px 0;
+    justify-content: space-between;
+    padding: 60px 0 0;
+    display: flex;
 
   &__title {
     font-family: 'Titan One';
@@ -97,6 +96,8 @@
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #ffffff;
+    padding: 0;
+    margin: 0 0 24px 0;
   }
 
   &__title--color-red {
@@ -110,8 +111,9 @@
     gap: 12px;
     padding: 0;
   }
-
   &__btn {
+    font-size: 14px;
+    line-height: 18px;
     color: #ffffff;
     display: flex;
     align-items: center;
@@ -121,7 +123,6 @@
     border-radius: 20px;
     border: none;
   }
-
   &__btn--white {
     color: #d41443;
     background: #ffffff;
@@ -135,13 +136,15 @@
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 18px;
     color: #ffffff;
     text-decoration: none;
     &--red {
       color: #d41443;
     }
+  }
+    &__img {
+      width: 304px;
+      margin-top: 103px;
   }
 }
 
