--- a/src/sass/components/_locations.scss
+++ b/src/sass/components/_locations.scss
@@ -17,6 +17,7 @@
   background: linear-gradient(#fffdfd 15%, #f6d3d3 40%, #fff5f6 80%);
   @media screen and (min-width: 768px) {
     background: linear-gradient(#fffdfd 35%, #f6d3d3 50%, #fff5f6 90%);
+    margin-top:-70px;
   }
 
   @media screen and (min-width: 1280px) {
@@ -26,6 +27,7 @@
       rgba(246, 211, 211, 1) 20%,
       rgba(255, 245, 246, 1) 80%
     );
+    margin-top: 180px;
   }
 }
 .title-hidden {
