--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -338,7 +338,7 @@
 
 @media (max-width: 320px) {
   .header-section {
-    overflow: hidden;
+    overflow-y: hidden;
     background: #ffb8ca;
     background-repeat: no-repeat;
     background-image:  url("../images/header/icecream-m.png"), url("../images/header/elipse-m.png");
@@ -385,3 +385,4 @@
   visibility: inherit;
 }
 }
+
