--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -177,6 +177,8 @@
     }
   }
   .menu-container {
+/*   visibility: hidden;
+  margin-right: 106px; */
   position: fixed;
   top: 0;
   right: 0;
@@ -184,6 +186,7 @@
   transform: translateX(100%);
 }
 .menu-container.is-open {
+ /*  visibility: initial; */
       transform: translateX(0);
     }
 }
