--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -195,7 +195,7 @@
 }
 }
 
-@media (max-width: 768px) and (min-width: 320px) {
+@media (max-width: 768px) and (min-width: 321px) {
 .buy-modal{
     &__grid {
         gap: 3px;
@@ -223,3 +223,16 @@
     opacity: 0;
 }
 
+@media (max-width: 320px) {
+    .buy-modal {
+        width: 280px;
+        &__grid {
+          flex-direction: column;
+          flex-wrap: wrap;
+          justify-content: center;
+        }
+      &__label {
+        width: 200px;
+      }
+      }
+}
