--- a/src/sass/components/_footer-section.scss
+++ b/src/sass/components/_footer-section.scss
@@ -1,21 +1,25 @@
 @import 'src/sass/utils/_vars.scss';
 
-.footer__container {
-  padding-left: 20px;
-  padding-right: 20px;
-}
 
-.footer__title {
-  width: 238px;
-  gap: 16px;
-  display: flex;
-  flex-direction: column;
-}
+
 
 .footer {
   padding-top: 40px;
-  background-color: #fff5f6;
+  background-color:$secondBackgroundColor;
   position: relative;
+
+ &__title {
+    width: 238px;
+    gap: 16px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  
 
   &__first-title {
     font-family: $secondFamily;
@@ -32,8 +36,8 @@
     line-height: 39px;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #d41443;
-    background-color: #fff5f6;
+    color:$primaryColor;
+    background-color: $secondBackgroundColor;
     transform: translatey(0px);
     animation: float 6s ease-in-out infinite;
   }
@@ -61,10 +65,10 @@
     font-size: 16px;
     line-height: 186%;
     letter-spacing: 0.02em;
-    color: #000000;
+    color: $blackColor;
   }
   &__tel {
-    color: #d41443;
+    color: $primaryColor;
     text-decoration: none;
   }
   &::after {
@@ -94,11 +98,12 @@
     justify-content: center;
   }
 }
-.footer__social-icon:hover {
-  fill: #d41443;
-}
+ 
 .footer__social-icon {
   fill: #fea5bb;
+  :hover {
+    fill: $primaryColor;
+  }
 }
 
 //Tablet
