--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -1,6 +1,6 @@
 .header-section {
   padding: 0 16px;
-  background: #ffb8ca;
+  background: $hero-bg;
   background-repeat: no-repeat;
   background-image: url('../images/header/header-icecream.png'),
     url('../images/header/header-elipse.png');
@@ -43,11 +43,11 @@
     line-height: 21px;
     display: flex;
     align-items: center;
-    color: #ffffff;
+    color: $whitecolor;
     text-decoration: none;
     &:hover,
     &:focus {
-      color: #d41443;
+      color: $accent-color;
       cursor: pointer;
     }
   }
@@ -57,31 +57,31 @@
     display: none;
   }
 
-   &__buy-btn {
-      font-family: "DM Sans";
-      font-style: normal;
-      font-weight: 700;
-      font-size: 16px;
-      line-height: 21px;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      color: #d41443;
-      background: #ffffff;
-      border: none;
-      border-radius: 22px;
-      margin: 0 0 0 auto;
-      padding: 12px 53px 12px 37px;
-      &:hover,
-      &:focus {
-        background: #ECEBEB;
-        cursor: pointer;
-      }
-    }
-    &__btn-icon {
-      margin-left:16px;
+  &__buy-btn {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: $accent-color;
+    background: $whitecolor;
+    border: none;
+    border-radius: 22px;
+    margin: 0 0 0 auto;
+    padding: 12px 53px 12px 37px;
+    &:hover,
+    &:focus {
+      background: $button-hover-color;
+      cursor: pointer;
     }
   }
+  &__btn-icon {
+    margin-left: 16px;
+  }
+}
 .hero {
   display: flex;
   justify-content: space-between;
@@ -96,11 +96,11 @@
     line-height: 44px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #ffffff;
+    color: $whitecolor;
   }
 
   &__title--color-red {
-    color: #d41443;
+    color: $accent-color;
   }
 
   &__btns {
@@ -112,22 +112,22 @@
   }
 
   &__btn {
-    color: #ffffff;
+    color: $whitecolor;
     display: flex;
     align-items: center;
     text-align: center;
     padding: 11px 23px;
-    background: #d41443;
+    background: $accent-color;
     border-radius: 20px;
     border: none;
   }
 
   &__btn--white {
-    color: #d41443;
-    background: #ffffff;
+    color: $accent-color;
+    background: $whitecolor;
     &:hover,
     &:focus {
-      background: #ecebeb;
+      background: $button-hover-color;
       cursor: pointer;
     }
   }
@@ -137,10 +137,10 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 18px;
-    color: #ffffff;
+    color: $whitecolor;
     text-decoration: none;
     &--red {
-      color: #d41443;
+      color: $accent-color;
     }
   }
 }
@@ -180,7 +180,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 140%;
-    color: #ffffff;
+    color: $whitecolor;
     margin: 68px 0 0 0;
   }
 
@@ -192,10 +192,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: #ffffff;
+    background: $whitecolor;
     &:hover,
     &:focus {
-      background: #ecebeb;
+      background: $button-hover-color;
       cursor: pointer;
     }
   }
@@ -223,7 +223,7 @@
     text-align: right;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #d41443;
+    color: $accent-color;
     margin: -23px 10px 0 0;
   }
 
@@ -234,14 +234,14 @@
     font-size: 14px;
     line-height: 18px;
     text-align: right;
-    color: #ffffff;
+    color: $whitecolor;
     margin: 0;
   }
 }
 @media (max-width: 768px) and (min-width: 321px) {
   .header-section {
     padding: 0 16px;
-    background: #ffb8ca;
+    background: $hero-bg;
     background-repeat: no-repeat;
     background-image: url('../images/header/header-icecream-t.png'),
       url('../images/header/elipse-t.png');
@@ -249,62 +249,17 @@
     padding: 0 32px;
   }
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .header-section {
-    background-position:  top 50% right 57%, top 60% right 43%;
-    background-image: url("../images/header/header-icecream-t@2x.png"), url("../images/header/elipse-t@2x.png");
-  }
-}
-.no-display{
-  display:none;
-}
-.header {
-  &__menu-btn {
-  display: initial;
-  margin-right: -270px;
-  }
-  &__btn-icon {
-  margin-left: 10px;
-  }
-  &__buy-btn {
-    padding-right: 37px;
-  }
-}
-.hero{
-  padding: 0 0 16px 0;
-  align-items: center;
-  overflow: hidden;
-  &__title {
-  font-size: 22px;
-  line-height: 25px;
-  }
-  &__link {
-  font-size: 8px;
-  line-height: 10px;
-  }
-  &__img {
-  margin-top: 70px;
-  width: 152px;
-  width: 190px;
-  }
-}
-.info {
-  margin: 20px 0 0 0;
-  &__btn {
-  width: 18px;
-  height: 18px;
-  }
-  &__side{
-    width: 114px;
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .header-section {
+      background-position: top 50% right 57%, top 60% right 43%;
+      background-image: url('../images/header/header-icecream-t@2x.png'),
+        url('../images/header/elipse-t@2x.png');
+    }
   }
   .no-display {
     display: none;
-  }
-  .menu-toggle,
-  .menu-container {
-    visibility: inherit;
   }
   .header {
     &__menu-btn {
@@ -345,83 +300,131 @@
     &__side {
       width: 114px;
     }
-    &__text {
-      margin-top: 61px;
-      font-size: 8px;
-      line-height: 150%;
+    .no-display {
+      display: none;
     }
-    &__img {
-      width: 152px;
+    .menu-toggle,
+    .menu-container {
+      visibility: inherit;
+    }
+    .header {
+      &__menu-btn {
+        display: initial;
+        margin-right: -270px;
+      }
+      &__btn-icon {
+        margin-left: 10px;
+      }
+      &__buy-btn {
+        padding-right: 37px;
+      }
+    }
+    .hero {
+      padding: 0 0 16px 0;
+      align-items: center;
+      overflow: hidden;
+      &__title {
+        font-size: 22px;
+        line-height: 25px;
+      }
+      &__link {
+        font-size: 8px;
+        line-height: 10px;
+      }
+      &__img {
+        margin-top: 70px;
+        width: 152px;
+        width: 190px;
+      }
+    }
+    .info {
+      margin: 20px 0 0 0;
+      &__btn {
+        width: 18px;
+        height: 18px;
+      }
+      &__side {
+        width: 114px;
+      }
+      &__text {
+        margin-top: 61px;
+        font-size: 8px;
+        line-height: 150%;
+      }
+      &__img {
+        width: 152px;
+      }
+    }
+    .sell-point {
+      &__no {
+        margin: -14px 5px 0 0;
+        font-size: 28px;
+        line-height: 32px;
+      }
+      &__type {
+        font-size: 8px;
+        line-height: 10px;
+      }
+      &__item {
+        position: relative;
+      }
+      &__icon {
+        width: 16px;
+        height: 16px;
+        top: -3px;
+        right: 0;
+      }
     }
   }
-  .sell-point {
-    &__no {
-      margin: -14px 5px 0 0;
-      font-size: 28px;
-      line-height: 32px;
-    }
-    &__type {
-      font-size: 8px;
-      line-height: 10px;
-    }
-    &__item {
-      position: relative;
-    }
-    &__icon {
-      width: 16px;
-      height: 16px;
-      top: -3px;
-      right: 0;
-    }
-  }
-}
 }
 @media (max-width: 320px) {
   .header-section {
     overflow: hidden;
-    background: #ffb8ca;
+    background: $hero-bg;
     background-repeat: no-repeat;
-    background-image:  url("../images/header/icecream-m.png"), url("../images/header/elipse-m.png");
-    background-position:  top 100% right 30%, top 60% right 0%;
+    background-image: url('../images/header/icecream-m.png'),
+      url('../images/header/elipse-m.png');
+    background-position: top 100% right 30%, top 60% right 0%;
   }
   @media (min-device-pixel-ratio: 2),
-  (-webkit-min-device-pixel-ratio: 2),
-  (min-resolution: 192dpi),
-  (min-resolution: 2dppx) {
-  .header-section {
-    background-position:  top 100% right 30%, top 60% right 0%;
-    background-image: url("../images/header/icecream-m@2x.png") 171px, url("../images/header/elipse-m@2x.png");
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .header-section {
+      background-position: top 100% right 30%, top 60% right 0%;
+      background-image: url('../images/header/icecream-m@2x.png') 171px,
+        url('../images/header/elipse-m@2x.png');
+    }
   }
-}
-.header {
-  padding: 8px 0 0 0;
-  &__icon{
-  margin-right: 41px;
-  padding: 0;
-}
-  &__menu-btn {
-    display: initial;
+  .header {
+    padding: 8px 0 0 0;
+    &__icon {
+      margin-right: 41px;
+      padding: 0;
+    }
+    &__menu-btn {
+      display: initial;
+    }
+    &__buy-btn {
+      display: none;
+    }
   }
-  &__buy-btn{
+  .hero {
+    padding: 151px 0 158px 0;
+    &__title {
+      font-size: 26px;
+      line-height: 30px;
+    }
+    &__img,
+    .sell-point,
+    .info {
+      display: none;
+    }
+  }
+  .no-display {
     display: none;
   }
-}
-.hero{
-  padding: 151px 0 158px 0;
-  &__title{
-  font-size: 26px;
-  line-height: 30px;
-    }
-  &__img,
-  .sell-point,
-  .info{
-  display:none;
+  .menu-toggle {
+    visibility: inherit;
   }
-} 
-.no-display {
-  display: none;
-}
-.menu-toggle {
-  visibility: inherit;
-}
 }
