--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,26 +1,25 @@
-
-@media (min-width: 320px) and (max-width: 768px){
-.nav-menu {
-    background: #E17992;
+@media (min-width: 320px) and (max-width: 768px) {
+  .nav-menu {
+    background: $menu-bg;
     width: 254px;
-    height: 1020px; 
+    height: 1020px;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
     &__btn {
-    border: none;
-    background: none;
-    position: absolute;
-    top: 20px;
-    right: 32px;
-    &:hover,
-    &:focus {
-    cursor: pointer;
-    }
+      border: none;
+      background: none;
+      position: absolute;
+      top: 20px;
+      right: 32px;
+      &:hover,
+      &:focus {
+        cursor: pointer;
+      }
     }
     &__close-icon {
-        fill: #ffffff;
+      fill: $whitecolor;
     }
     &__icon {
       margin: 0 auto 0 0;
@@ -36,25 +35,25 @@
     &__item {
       width: 254px;
       height: 42px;
-      border: 1px solid #E18298;
-      font-family: "DM Sans";
+      border: 1px solid $border-color;
+      font-family: 'DM Sans';
       font-style: normal;
       font-weight: 700;
       font-size: 16px;
       line-height: 21px;
       display: flex;
       align-items: center;
-      color: #ffffff;
+      color: $whitecolor;
       text-decoration: none;
       padding-left: 20px;
       &:hover,
       &:focus {
-        color: #D41443;
+        color: $accent-color;
         cursor: pointer;
-  }
-}
+      }
+    }
     &__buy-btn {
-      font-family: "DM Sans";
+      font-family: 'DM Sans';
       font-style: normal;
       font-weight: 700;
       font-size: 16px;
@@ -62,57 +61,57 @@
       display: flex;
       align-items: center;
       text-align: center;
-      color: #d41443;
-      background: #ffffff;
+      color: $accent-color;
+      background: $whitecolor;
       border: none;
       border-radius: 22px;
       margin: 23px 0 20px 0;
       padding: 12px 59px 12px 43px;
       &:hover,
       &:focus {
-        background: #ECEBEB;
+        background: $button-hover-color;
         cursor: pointer;
       }
     }
     &__menu-btn {
       background-color: transparent;
-      border:none;
-      display:none;
+      border: none;
+      display: none;
     }
   }
   .menu-container {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 3;
-  transform: translateX(100%);
-}
-.menu-container.is-open {
-      transform: translateX(0);
-    }
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    transform: translateX(100%);
+  }
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
 }
 @media (max-width: 320px) {
   .nav-menu {
     padding: 0;
-    background: #E17992;
+    background: $menu-bg;
     width: 250px;
-    height: 502px; 
+    height: 502px;
     display: flex;
     flex-direction: column;
     align-items: center;
     &__btn {
-    border: none;
-    background: none;
-    position: absolute;
-    top: 20px;
-    right: 32px;
-    &:hover,
-    &:focus {
-    cursor: pointer;
-    }
+      border: none;
+      background: none;
+      position: absolute;
+      top: 20px;
+      right: 32px;
+      &:hover,
+      &:focus {
+        cursor: pointer;
+      }
     }
     &__close-icon {
-        fill: #ffffff;
+      fill: $whitecolor;
     }
     &__icon {
       margin: 0 auto 0 0;
@@ -120,7 +119,7 @@
     &__list {
       display: flex;
       flex-direction: column;
-      gap:unset;
+      gap: unset;
       list-style: none;
       margin: 0 auto 0 auto;
       padding: 0;
@@ -128,25 +127,25 @@
     &__item {
       width: 250px;
       height: 42px;
-      border: 1px solid #E18298;
-      font-family: "DM Sans";
+      border: 1px solid $border-color;
+      font-family: 'DM Sans';
       font-style: normal;
       font-weight: 700;
       font-size: 14px;
       line-height: 18px;
       display: flex;
       align-items: center;
-      color: #ffffff;
+      color: $whitecolor;
       text-decoration: none;
       padding-left: 20px;
       &:hover,
       &:focus {
-        color: #D41443;
+        color: $accent-color;
         cursor: pointer;
-  }
-}
+      }
+    }
     &__buy-btn {
-      font-family: "DM Sans";
+      font-family: 'DM Sans';
       font-style: normal;
       font-weight: 700;
       font-size: 16px;
@@ -154,32 +153,32 @@
       display: flex;
       align-items: center;
       text-align: center;
-      color: #d41443;
-      background: #ffffff;
+      color: $accent-color;
+      background: $whitecolor;
       border: none;
       border-radius: 22px;
       padding: 12px 70px 12px 48px;
-      margin-top: 60px ;
+      margin-top: 60px;
       &:hover,
       &:focus {
-        background: #ECEBEB;
+        background: $button-hover-color;
         cursor: pointer;
       }
     }
     &__menu-btn {
       background-color: transparent;
-      border:none;
-      display:none;
+      border: none;
+      display: none;
     }
   }
   .menu-container {
-  position: fixed;
-  top: 0;
-  right: 0;
-  z-index: 3;
-  transform: translateX(100%);
-}
-.menu-container.is-open {
-      transform: translateX(0);
-    }
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 3;
+    transform: translateX(100%);
+  }
+  .menu-container.is-open {
+    transform: translateX(0);
+  }
 }
