--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,9 +1,5 @@
-$color_1: #ffa5ba;
-$color_2: #d41443;
-$color_3: #ffffff;
 $font-family_1: 'Titan One';
 $font-family_2: 'DM Sans';
-$background-color_1: #fff0f5;
 
 @media screen and (max-width: 480px) {
   .products__list {
@@ -31,7 +27,7 @@ ul {
   line-height: 21px;
   text-align: center;
   text-transform: uppercase;
-  color: $color_1;
+  color: $subtitle-color;
 }
 .products__title {
   font-family: $font-family_1;
@@ -41,7 +37,7 @@ ul {
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: $color_2;
+  color: $accent-color;
 }
 .products__list {
   display: grid;
@@ -53,7 +49,7 @@ ul {
 }
 
 .products__item {
-  background: #ffb8ca;
+  background: $hero-bg;
   border-radius: 24px;
   height: 489px;
   width: 280px;
@@ -61,7 +57,7 @@ ul {
   margin-bottom: 30px;
 
   &:nth-child(2) {
-    background: #f0d1a5;
+    background: $cardtitle-background;
     border-radius: 24px;
     &::before {
       content: '';
@@ -74,7 +70,7 @@ ul {
     }
   }
   &:nth-child(3) {
-    background: #c2e297;
+    background: $cardtitle-background2;
     border-radius: 24px;
     &::before {
       content: '';
@@ -109,7 +105,7 @@ ul {
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: $color_3;
+  color: $whitecolor;
   padding-top: 130px;
 }
 .products__information {
@@ -120,7 +116,7 @@ ul {
   line-height: 176%;
   text-align: center;
   letter-spacing: 0.04em;
-  color: $color_3;
+  color: $whitecolor;
 }
 .overlay__description {
   font-family: $font-family_2;
@@ -130,7 +126,7 @@ ul {
   line-height: 176%;
   text-align: center;
   letter-spacing: 0.04em;
-  color: $color_2;
+  color: $accent-color;
 }
 .products__button {
   border-radius: 50%;
@@ -151,13 +147,13 @@ ul {
 .products__svg {
   height: 18px;
   width: 30px;
-  fill: #d41443;
+  fill: $accent-color;
   display: flex;
 }
 .points {
   width: 6px;
   height: 6px;
-  background: #ffffff;
+  background: $whitecolor;
   border-radius: 50%;
   margin: 0 auto;
   position: relative;
@@ -165,7 +161,7 @@ ul {
   &::before {
     width: 6px;
     height: 6px;
-    background: #ffffff;
+    background: $whitecolor;
     border-radius: 50%;
     margin: 0 auto;
     position: relative;
@@ -177,7 +173,7 @@ ul {
   &::after {
     width: 6px;
     height: 6px;
-    background: #ffffff;
+    background: $whitecolor;
     border-radius: 50%;
     margin: 0 auto;
     position: relative;
@@ -193,7 +189,7 @@ ul {
 .products__description {
   width: 270px;
   height: 380px;
-  background-color: $background-color_1;
+  background-color: $background-color;
   position: relative;
   z-index: 99;
   visibility: hidden;
@@ -230,7 +226,7 @@ ul {
     line-height: 30px;
     text-align: center;
     text-transform: uppercase;
-    color: $color_1;
+    color: $subtitle-color;
   }
   .products__title {
     font-family: $font-family_1;
@@ -241,7 +237,7 @@ ul {
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: $color_2;
+    color: $accent-color;
   }
   .products-section-container {
     width: 768px;
@@ -252,7 +248,7 @@ ul {
     justify-content: center;
   }
   .products__item {
-    background: #ffb8ca;
+    background: $hero-bg;
     border-radius: 24px;
     height: 473px;
     width: 224px;
@@ -309,7 +305,7 @@ ul {
   .products__description {
     width: 215px;
     height: 350px;
-    background-color: $background-color_1;
+    background-color: $background-color;
     position: absolute;
     z-index: 99;
     visibility: hidden;
@@ -355,7 +351,7 @@ ul {
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: $color_1;
+    color: $subtitle-color;
   }
   .products__title {
     font-family: $font-family_1;
@@ -366,7 +362,7 @@ ul {
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: $color_2;
+    color: $accent-color;
   }
   .products-section-container {
     width: 1200px;
@@ -379,7 +375,7 @@ ul {
     margin-bottom: 70px;
   }
   .products__item {
-    background: #ffb8ca;
+    background: $hero-bg;
     border-radius: 24px;
     height: 535px;
     width: 368px;
@@ -435,7 +431,7 @@ ul {
   .products__description {
     width: 350px;
     height: 420px;
-    background-color: $background-color_1;
+    background-color: $background-color;
     position: absolute;
     z-index: 99;
     visibility: hidden;
