--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #fff5f6;
+  background-color: $priority-bg-color;
   margin-top: 0px;
 }
 .container-footer {
@@ -29,7 +29,7 @@
     line-height: 34px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #ffa5ba;
+    color: $subtitle-color;
     width: 232px;
     margin-bottom: -30px;
 
@@ -49,7 +49,7 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     width: 200px;
-    color: #d41443;
+    color: $accent-color;
     animation: flicker 0.5s ease-in-out infinite alternate;
     @keyframes flicker {
       0% {
@@ -114,7 +114,7 @@
 
     &:hover,
     &:focus {
-      background: #d41443;
+      background: $accent-color;
     }
   }
 }
@@ -136,7 +136,7 @@
     font-style: normal;
     font-size: 12px;
     line-height: 1.86;
-    color: black;
+    color: $second-text-color;
     margin-right: 4px;
 
     @media screen and (min-width: 768px) {
@@ -153,7 +153,7 @@
     font-size: 12px;
     line-height: 1.86;
     text-decoration: none;
-    color: #d41443;
+    color: $accent-color;
     transition-property: font-size;
     transition-duration: 500ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -173,6 +173,6 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  border-top: 1px solid #e1e1e1;
-  color: #907e82;
+  border-top: 1px solid $subdivision-color;
+  color: $third-text-color;
 }
