--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -1,69 +1,68 @@
-$color_1: #FFF5F6;
-$color_2: #d41443;
-$color_3: #ffffff;
 $font-family_1: 'Titan One';
 $font-family_2: 'DM Sans';
-$background-color_1: #fff0f5;
 
 .gallery {
-    // padding-top: 60px;
-    background: linear-gradient(to bottom, $color_1 0%, $color_1 35%, $color_3 35%, $color_3 100%);
-    max-width: 100%;
+  // padding-top: 60px;
+  background: linear-gradient(
+    to bottom,
+    $priority-bg-color 0%,
+    $priority-bg-color 35%,
+    $whitecolor 35%,
+    $whitecolor 100%
+  );
+  max-width: 100%;
 }
 
 .gallery__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
 
+  div {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     gap: 3px;
+  }
+  &__c2 {
+    margin-top: 30px;
+  }
 
-    div {
-        display: flex;
-        flex-direction: column;
-        gap: 3px;
-    }
-    &__c2{
-        margin-top: 30px;
-    }
+  &__c4 {
+    margin-top: 40px;
+  }
 
-    &__c4{
-        margin-top: 40px;
-    }
+  &__c6 {
+    margin-top: 40px;
+  }
 
-    &__c6{
-        margin-top:40px;
-    }
-    
-    &__trans{
-        transition: 300ms linear;
-    }
+  &__trans {
+    transition: 300ms linear;
+  }
 
-    &__trans:hover{
-        transform: scale(1.2);
-    }
+  &__trans:hover {
+    transform: scale(1.2);
+  }
 }
 
-
-
 @media screen and (min-width: 768px) {
-    .gallery__container {
-        gap: 6px;
-        div {
-            gap: 6px;
-        }
+  .gallery__container {
+    gap: 6px;
+    div {
+      gap: 6px;
     }
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .gallery {
-        padding: 120px 94px 0px 93px;
-    }
+  .gallery {
+    padding: 120px 94px 0px 93px;
+  }
 
-    .gallery__container {
-        gap: 8px;
-        div {
-            gap: 8px;
-        }
+  .gallery__container {
+    gap: 8px;
+    div {
+      gap: 8px;
     }
+  }
 }
