--- a/src/sass/components/_locationsModal.scss
+++ b/src/sass/components/_locationsModal.scss
@@ -11,14 +11,14 @@
   z-index: 10;
   display: flex;
   justify-content: center;
-  align-items:center;
+  align-items: center;
 
   transition: opacity 250ms linear;
   &__inside {
     position: relative;
     width: 550px;
     height: 600px;
-    background: #fff5f6;
+    background: $priority-bg-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -34,20 +34,20 @@
     box-sizing: border-box;
     width: 40px;
     height: 40px;
-    background-color: #ffa5ba;
+    background-color: $subtitle-color;
 
-    fill: #d41443;
+    fill: $accent-color;
     border: 1px solid rgba(0, 0, 0, 0.1);
   }
   &__button:hover {
-    fill: black;
+    fill: $second-text-color;
     cursor: pointer;
   }
   &__title {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: crimson;
+    color: $hover-color;
     font-family: 'Titan One';
     font-style: normal;
     font-weight: 400;
@@ -70,7 +70,7 @@
     @keyframes col {
       0%,
       25% {
-        fill: crimson;
+        fill: $hover-color;
       }
       25%,
       50% {
@@ -102,7 +102,7 @@
   &__button {
     background: pink;
     height: 42px;
-    color: black;
+    color: $second-text-color;
     border: none;
     font-family: 'DM Sans';
     font-style: normal;
@@ -118,6 +118,6 @@
   }
   &__button:hover,
   &__button:focus {
-    background: #d41443;
+    background: $accent-color;
   }
 }
