--- a/src/sass/components/_swiper.scss
+++ b/src/sass/components/_swiper.scss
@@ -1,175 +1,169 @@
-    
 .swiper {
-    // padding:120px 116px;
+  // padding:120px 116px;
+  max-width: 1200px;
+  height: 550px;
+  &-slide {
+    // background-color: $second-text-color;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: $whitecolor;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+
+  color: $second-text-color;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.swiper-pagination-bullet-active {
+  color: $whitecolor;
+  background: $swiper-color;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: $swiper-color;
+  // fill: $swiper-color;
+}
+
+.customer-reviews {
+  // padding: 120px 0px 0px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1200px;
+}
+
+.customer-reviews__image img {
+  width: 85px;
+  height: 85px;
+}
+
+.customer-reviews__text-container {
+  background-color: $swiper-bg;
+  // width: 320px;
+  margin-top: 32px;
+  margin-bottom: 16px;
+  padding: 32px 20px 16px 20px;
+}
+
+.underline-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 31px;
+  color: $second-text-color;
+  text-align: center;
+  text-indent: 10px;
+  position: relative;
+  z-index: 4;
+  background-image: repeating-linear-gradient(
+    to top,
+    #e1e1e1,
+    #e1e1e1 1px,
+    transparent 1px,
+    transparent 32px
+  );
+
+  &::before {
+    content: url('/src/images/testimonials/quotes.svg');
+    position: absolute;
+    top: -20px;
+  }
+}
+
+.red-dots-container {
+  // padding: 20px 0px 0px 0px;
+  display: inline-flex;
+  gap: 10px;
+  margin-bottom: 16px;
+
+  .red-dot {
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: $swiper-color;
+  }
+}
+
+.reviewer-name {
+  margin: 0px;
+  padding-bottom: 0px;
+  font-weight: 500;
+  line-height: 1.85;
+  color: $second-text-color;
+}
+
+@media screen and (min-width: 768px) {
+  .swiper {
     max-width: 1200px;
-    height: 550px;
-    &-slide{
-        // background-color: black;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
+    height: 400px;
+    // padding-top: 60px;
+  }
+  .customer-reviews {
+    // padding-bottom: 60px;
+    padding-left: 74px;
+    padding-right: 74px;
+  }
 
-        }
-    }
+  .customer-reviews__text-container {
+    // width: 620px;
+    height: 164px;
+    margin-top: 20px;
+    margin-bottom: 4px;
+  }
 
-    .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-      
-        /* Center slide text vertically */
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      
-      .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
-      
-      .swiper-pagination-bullet {
-        width: 12px;
-        height: 12px;
+  .underline-text {
+    font-size: 14px;
+    text-indent: 37px;
 
-        color: #000;
-        opacity: 1;
-        background: rgba(0, 0, 0, 0.2);
-      }
-      
-      .swiper-pagination-bullet-active {
-        
-        color: #fff;
-        background: red;
-      }
+    &::before {
+      left: -30px;
+    }
+  }
+  .reviewer-name {
+    padding: 0px;
+    font-size: 16px;
+  }
+}
 
-      .swiper-button-prev,
-      .swiper-button-next{
-        color:red;
-        // fill: red;
-      }
+@media screen and (min-width: 1200px) {
+  .swiper {
+    max-width: 1200px;
+    height: 450px;
+  }
+  .customer-reviews {
+    padding: 60px 116px;
+  }
 
-
-    .customer-reviews {
-        // padding: 120px 0px 0px 0px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        max-width: 1200px;
-    }
-    
-    .customer-reviews__image img { 
-            width: 85px;
-            height: 85px;
-    }
-    
-    .customer-reviews__text-container {
-        background-color: #fafafa;
-        // width: 320px;
-        margin-top: 32px;
-        margin-bottom: 16px;
-        padding: 32px 20px 16px 20px;
-    }
-    
-    .underline-text {
-        font-weight: 500;
-        font-size: 12px;
-        line-height: 31px;
-        color: black;
-        text-align: center;
-        text-indent: 10px;
-        position: relative;
-        z-index: 4;
-        background-image: repeating-linear-gradient(to top,
-        #e1e1e1,
-        #e1e1e1 1px,
-        transparent 1px,
-        transparent 32px);
-    
-        &::before {
-            content: url("/src/images/testimonials/quotes.svg");
-            position: absolute;
-            top: -20px;
-        }
-    }
-    
-    .red-dots-container {
-        // padding: 20px 0px 0px 0px;
-        display: inline-flex;
-        gap: 10px;
-        margin-bottom: 16px;
-    
-        .red-dot {
-            width: 4px;
-            height: 4px;
-            border-radius: 50%;
-            background-color: red;
-        }
-    }
-    
-    .reviewer-name {
-        margin:0px;
-        padding-bottom: 0px;
-        font-weight: 500;
-        line-height: 1.85;
-        color: black;
-    }
-    
-    
-    @media screen and (min-width: 768px) {
-        .swiper{
-            max-width: 1200px;
-            height: 400px;
-            // padding-top: 60px;
-        }
-        .customer-reviews {
-            // padding-bottom: 60px;
-            padding-left: 74px;
-            padding-right: 74px;
-        }
-    
-        .customer-reviews__text-container {
-            // width: 620px;
-            height: 164px;
-            margin-top: 20px;
-            margin-bottom: 4px;
-        }
-    
-        .underline-text {
-            font-size: 14px;
-            text-indent: 37px;
-    
-            &::before {
-                left: -30px;
-            }
-        }   
-        .reviewer-name {
-            padding:0px;
-            font-size: 16px;
-        }
-    }
-    
-    @media screen and (min-width: 1200px) {
-
-        .swiper{
-            max-width: 1200px;
-            height: 450px;
-            
-        }
-        .customer-reviews {
-            padding: 60px 116px;
-        }
-
-        .customer-reviews__text-container {
-            margin-top: 16px;
-            margin-bottom: 16px;
-        }
-        .reviewer-name {
-            font-size: 20px;
-        }
-
-    }
+  .customer-reviews__text-container {
+    margin-top: 16px;
+    margin-bottom: 16px;
+  }
+  .reviewer-name {
+    font-size: 20px;
+  }
+}
