--- a/src/sass/components/_buy-now-modal.scss
+++ b/src/sass/components/_buy-now-modal.scss
@@ -224,15 +224,24 @@
 }
 
 @media (max-width: 320px) {
+    .buy-modal-inner-div {
+        width: unset;
+    }
     .buy-modal {
-        width: 280px;
+        width: 100%;
+        top: 0;
+        right: 0;
+        border-radius: 0;
         &__grid {
           flex-direction: column;
           flex-wrap: wrap;
           justify-content: center;
         }
+        &__btn {
+            top: 5px;
+        }
       &__label {
-        width: 200px;
+        width: 250px;
       }
       }
 }
