--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,11 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__container container">
     <div class="footer__info-container">
       <div class="footer__title-container">
-        <span class="footer__title-slogan">homemade ice cream made</span>
+        <div class="footer__title-slogan">
+          <span class="footer__title-slogan-ice" >homemade ice cream</span>
+          <span class="footer__title-slogan-made">made</span>
+        </div>
         <span class="footer__title-motto">with passion</span>
       </div>
       <div class="footer__social-container">
@@ -17,14 +20,18 @@
           <li class="footer__social-links-item">
             <a class="footer__social-link" href="https://telegram.org/">
               <svg class="social-links-icon" width="20px" height="20px">
-                <use href="./images/footer/footer-icons.svg#icon-telegram"></use>
+                <use
+                  href="./images/footer/footer-icons.svg#icon-telegram"
+                ></use>
               </svg>
             </a>
           </li>
           <li class="footer__social-links-item">
             <a class="footer__social-link" href="https://www.facebook.com/">
               <svg class="footer__social-links-icon" width="20px" height="20px">
-                <use href="./images/footer/footer-icons.svg#icon-facebook"></use>
+                <use
+                  href="./images/footer/footer-icons.svg#icon-facebook"
+                ></use>
               </svg>
             </a>
           </li>
