--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,6 @@
+
 .footer {
-  background: var(--brand-color-background);
+  background: var(--brand-color-pink-background);
   &__container {
     display: flex;
     flex-direction: column;
@@ -17,7 +18,8 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 28px;
+    gap: 16px;
+    cursor: pointer;
   }
   &__social-container {
     display: flex;
@@ -39,6 +41,23 @@
     text-transform: uppercase;
     color: #ffa5ba;
     width: 234px;
+  }
+  &__title-slogan-made
+  {
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-block;
+  }
+  &__title-slogan-ice
+  {
+    transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-block;
+  }
+  &__title-container:hover &__title-slogan-ice {
+    transform: translate(55px);
+  }
+  &__title-container:hover  &__title-slogan-made {
+    color: var(--brand-color-red);
+    transform: translate(-180px, 27px);
   }
   &__title-motto {
     font-family: 'Titan One';
@@ -86,7 +105,7 @@
   }
   &__social-text--number {
     color: var(--brand-color-red);
-    text-decoration: none;
+    // text-decoration: none;
   }
   &__social-links-item:hover,
   &__social-links-item:focus {
