--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,7 +1,15 @@
 :root {
-    --brand-color-red: #D41342;
-    --brand-color-pink: #fea5bb;
-    --brand-color-background: #FFF5F6;
-    --brand-color-white: #fff;
-    --brand-color-black: #000;
-  }
+  --brand-color-red: #d41443;
+  --brand-color-pink: #fea5bb;
+  --brand-color-pink-label: #ffa5ba;
+  --brand-color-pink-background: #fff5f6;
+  --brand-color-pink-dark: #ffb8ca;
+  --brand-color-background: #e5e5e5;
+  --brand-color-gray: #907e82;
+  --brand-color-white: #fff;
+  --brand-color-black: #000;
+  --brand-color-ghost: #ecebeb;
+  --brand-font-weight: 500;
+  --brand-font-weight-bold: 700;
+  --brand-letter-spacing: 0.04em;
+}
