--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -4,15 +4,14 @@
   margin-inline-start: 0;
   margin-inline-end: 0;
   padding-inline-start: 0;
+  text-decoration: none;
 }
 body {
-  background-color: var(--brand-color-white);
-  font-family: 'Roboto', sans-serif;
+  color: var(--brand-color-gray);
   font-weight: 400;
   font-size: 16px;
   font-style: normal;
-  color: var(--brand-color-gray-light);
-  line-height: 1.14;
+  letter-spacing: var(--brand-letter-spacing);
 }
 img {
   display: block;
@@ -20,8 +19,11 @@ img {
 .container {
   margin: 0px auto;
   width: 100%;
-  padding: 0 15px;
+  height: 100%;
+  min-width: 320px;
+  padding: 0 20px;
 }
+
 // @media screen and (min-width: 768px) {
 //   .container {
 //     width: 768px;
@@ -32,6 +34,16 @@ img {
 //     width: 1200px;
 //   }
 // }
+
+// contacts
+.unstyled-list {
+  list-style: none;
+}
+.section-spacing {
+  margin-bottom: 20px;
+}
+// contacts
+
 
 
 
