--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,3 +8,4 @@
 @import './components/galery-section';
 @import './components/hero-header-section';
 @import './components/mobile-menu';
+@import './components/modal';
