--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -1,7 +1,6 @@
 <!-- Header -->
-<header class="header ">
-   
-  <div class="container-header ">
+<header class="header">
+  <div class="container-header">
     <a class="header-logo" href="/src/index.html">
       <svg class="header-logo__svg" width="199px" height="50px">
         <use href="./images/sprite.svg#icon-Group"></use>
@@ -16,10 +15,14 @@
           <a class="nav__list-link" href="#about-section.html">About us</a>
         </li>
         <li class="nav__list-item">
-          <a class="nav__list-link" href="#about-section.html">How it’s made?</a>
+          <a class="nav__list-link" href="#about-section.html"
+            >How it’s made?</a
+          >
         </li>
         <li class="nav__list-item">
-          <a class="nav__list-link" href="#products-section.html">Our products</a>
+          <a class="nav__list-link" href="#products-section.html"
+            >Our products</a
+          >
         </li>
         <li class="nav__list-item">
           <a class="nav__list-link" href="#contacts-section.html">Contact</a>
@@ -27,99 +30,160 @@
       </ul>
     </nav>
     <div class="btn-wrapper">
-    <button
-      class="menu-toggle js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
+      <button
+        class="menu-toggle js-open-menu"
+        aria-expanded="false"
+        aria-controls="mobile-menu"
+      >
+        <svg
+          width="20"
+          height="20"
+          viewBox="0 0 46 32"
+          xmlns="http://www.w3.org/2000/svg"
         >
-          <svg
-            width="20"
-            height="20"
-           viewBox="0 0 46 32"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path fill="none" stroke="#d41443" stroke-width="2.2857" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" style="stroke: var(--color1, #d41443)" d="M0 2.286h45.714"></path>
-            <path fill="none" stroke="#d41443" stroke-width="2.2857" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" style="stroke: var(--color1, #d41443)" d="M0 16h45.714"></path>
-            <path fill="none" stroke="#d41443" stroke-width="2.2857" stroke-miterlimit="4" stroke-linecap="butt" stroke-linejoin="miter" style="stroke: var(--color1, #d41443)" d="M0 29.714h45.714"></path>
-           
-          </svg>
+          <path
+            fill="none"
+            stroke="#d41443"
+            stroke-width="2.2857"
+            stroke-miterlimit="4"
+            stroke-linecap="butt"
+            stroke-linejoin="miter"
+            style="stroke: var(--color1, #d41443)"
+            d="M0 2.286h45.714"
+          ></path>
+          <path
+            fill="none"
+            stroke="#d41443"
+            stroke-width="2.2857"
+            stroke-miterlimit="4"
+            stroke-linecap="butt"
+            stroke-linejoin="miter"
+            style="stroke: var(--color1, #d41443)"
+            d="M0 16h45.714"
+          ></path>
+          <path
+            fill="none"
+            stroke="#d41443"
+            stroke-width="2.2857"
+            stroke-miterlimit="4"
+            stroke-linecap="butt"
+            stroke-linejoin="miter"
+            style="stroke: var(--color1, #d41443)"
+            d="M0 29.714h45.714"
+          ></path>
+        </svg>
       </button>
-    <button class="btn-nav" type="button"><span class="bounce">
-      Buy now
-      <svg class="btn-nav__svg" width="4px" height="8px">
-        <use href="./images/sprite.svg#icon-Vector-1"></use>
-      </svg></span>
-    </button>
+      <button class="btn-nav" type="button" data-modal-open>
+        <span class="bounce">
+          Buy now
+          <svg class="btn-nav__svg" width="4px" height="8px">
+            <use href="./images/sprite.svg#icon-Vector-1"></use>
+          </svg>
+        </span>
+      </button>
     </div>
   </div>
-
-
-<!-- Hero -->
-
-<section class="hero">
-  <div class="hero-section container">
-
-    <div class="hero-section__wrapper">
-      <div class="hero__title-container">
-        <h1 class="hero__title">
-          ICE CREAM MADE WITH<span class="hero__title-second">PASSION</span>
-        </h1>
-        <ul class="hero__btn unstyled-list">
-          <li class="hero__btn-item-first">
-            <button class="hero__btn-type-first" type="button"><span class="bounce">Products </span></button>
+  <!-- Hero -->
+  <section class="hero">
+    <div class="hero-section container">
+      <div class="hero-section__wrapper">
+        <div class="hero__title-container">
+          <h1 class="hero__title">
+            ICE CREAM MADE WITH<span class="hero__title-second">PASSION</span>
+          </h1>
+          <ul class="hero__btn unstyled-list">
+            <li class="hero__btn-item-first">
+              <button class="hero__btn-type-first" type="button">
+                <span class="bounce">Products </span>
+              </button>
+            </li>
+            <li class="hero__btn-item-second">
+              <button class="hero__btn-type-second" type="button">
+                <span class="bounce">How it’s made?</span>
+              </button>
+            </li>
+          </ul>
+        </div>
+        <ul class="hero__number-list unstyled-list">
+          <li class="hero__number-list-item">
+            <p class="hero__number-list-nr">
+              16
+              <span class="hero__number-list-text">cafes</span>
+            </p>
           </li>
-          <li class="hero__btn-item-second">
-            <button class="hero__btn-type-second" type="button"><span class="bounce">How it’s made?</span> </button>
+          <li class="hero__number-list-item">
+            <p class="hero__number-list-nr">
+              23<span class="hero__number-list-text">food trucks</span>
+            </p>
           </li>
         </ul>
       </div>
-      <ul class="hero__number-list unstyled-list">
-        <li class="hero__number-list-item">
-          <p class="hero__number-list-nr">16
-            <span class="hero__number-list-text">cafes</span>
-          </p>
-          
-        </li>
-        <li class="hero__number-list-item">
-          <p class="hero__number-list-nr">23<span class="hero__number-list-text">food trucks</span></p>
-        </li>
-      </ul>
+
+      <div class="hero__about-milk">
+        <p class="hero__about-milk-details">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et
+        </p>
+        <button class="arrow-button arrow-button--mod" type="button">
+          <svg class="arrow-button__svg" width="15px" height="15px">
+            <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
+          </svg>
+        </button>
+      </div>
+
+      <picture class="hero__pictures">
+        <source
+          media="screen and (min-width: 768px) and (max-width: 1279px)"
+          srcset="images\milk-cup-t.png 1x, images\milk-cup-t@2x.png 2x"
+        />
+        <source
+          media="screen and (min-width:1280px)"
+          srcset="images\milk-cup-d.png 1x, images\milk-cup-d@2x.png 2x"
+        />
+        <img
+          class="hero__pictures-milk"
+          width="270"
+          src="./images/milk-cup-d.png"
+          alt="milk cup"
+        />
+      </picture>
+
+      <picture class="hero__pictures">
+        <source
+          media="screen and (max-width: 767px)"
+          srcset="images\ice-cup-m.png 1x, images\ice-cup-m@2x.png 2x"
+        />
+        <source
+          media="screen and (min-width: 768px) and (max-width: 1279px)"
+          srcset="images\ice-cup-t.png 1x, images\ice-cup-t@2x.png 2x"
+        />
+        <source
+          media="screen and (min-width:1280px)"
+          srcset="images\ice-cup-d.png 1x, images\ice-cup-d@2x.png 2x"
+        />
+        <img
+          class="hero__pictures-ice"
+          width="270"
+          src="./images/ice-cup-d.png"
+          alt="ice-cup"
+        />
+      </picture>
+
+      <picture class="hero__pictures">
+        <source
+          media="screen and (min-width: 768px) and (max-width: 1279px)"
+          srcset="images\eat-ice-t.png 1x, images\eat-ice-t@2x.png 2x"
+        />
+        <source
+          media="screen and (min-width: 1280px)"
+          srcset="images\eat-ice-d.png 1x, images\eat-ice-d@2x.png 2x"
+        />
+        <img
+          class="hero__pictures-eat"
+          src="./images/eat-ice-d.png"
+          alt="ice-girl"
+        />
+      </picture>
     </div>
-
-
-    <div class="hero__about-milk">
-      <p class="hero__about-milk-details">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et
-      </p>
-      <button class="arrow-button arrow-button--mod" type="button">
-        <svg class="arrow-button__svg" width="15px" height="15px">
-          <use href="/src/images/sprite.svg#icon-arrow-thick-right"></use>
-        </svg>
-      </button>
-    </div>
-
-    <picture class="hero__pictures">
-      <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-        srcset="images\milk-cup-t.png 1x, images\milk-cup-t@2x.png 2x" />
-      <source media="screen and (min-width:1280px)" srcset="images\milk-cup-d.png 1x, images\milk-cup-d@2x.png 2x" />
-      <img class="hero__pictures-milk" width="270" src="./images/milk-cup-d.png" alt="milk cup" />
-    </picture>
-
-    <picture class="hero__pictures">
-      <source media="screen and (max-width: 767px)" srcset="images\ice-cup-m.png 1x, images\ice-cup-m@2x.png 2x" />
-      <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-        srcset="images\ice-cup-t.png 1x, images\ice-cup-t@2x.png 2x" />
-      <source media="screen and (min-width:1280px)" srcset="images\ice-cup-d.png 1x, images\ice-cup-d@2x.png 2x" />
-      <img class="hero__pictures-ice" width="270" src="./images/ice-cup-d.png" alt="ice-cup" />
-    </picture>
-
-    <picture class="hero__pictures">
-      <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-        srcset="images\eat-ice-t.png 1x, images\eat-ice-t@2x.png 2x" />
-      <source media="screen and (min-width: 1280px)" srcset="images\eat-ice-d.png 1x, images\eat-ice-d@2x.png 2x" />
-      <img class="hero__pictures-eat" src="./images/eat-ice-d.png" alt="ice-girl" />
-    </picture>
-  </div>
-</section>
+  </section>
 </header>
